# nessie

./: .gitignore  README.md
dolfin/: .gitignore  README.md  next.config.js  package.json  tsconfig.json
dolfin/components/: Header.tsx  Navbar.tsx
dolfin/lib/: apollo.js  redux.js  useInterval.js
dolfin/pages/: _app.tsx  index.tsx
dolfin/public/: index.html
dolfin/src/: App.tsx
dolfin/src/components/: Header.tsx  Navbar.tsx
dolfin/src/pages/: home.tsx
dolfin/src/styles/: App.css  Header.module.scss  palette.txt
dolfin/styles/: Header.module.scss  Navbar.module.scss  global.scss
pagurus/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Rocket.toml.example  docker-compose.yml
pagurus/migrations/2021-02-22-131910_create_user/: up.sql
pagurus/migrations/2021-03-29-044135_create_guild/: up.sql
pagurus/src/: endpoints.rs  main.rs  models.rs  routes.rs  schema.rs
pagurus/src/models/: user.rs
pagurus/src/routes/: mod.rs  user.rs
pagurus/src/tests/: tests.rs
pagurus/src/utils/: mod.rs  time.rs
