[package]
name = "pagurus"
version = "0.1.0"
authors = ["tejasag <tejasagarwalbly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "chrono", "uuidv07", "r2d2"] }
dotenv = "0.15.0"
rocket = "0.4.7"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]
